# slideshow

./: .gitignore  README.md  pyproject.toml
src/slideshow/: __init__.py  animate.py  center.py  cli.py  faces.py  images.py  mask.py  pick.py  pickfaces.py  segmentation.py  silhouette.py  video.py
src/slideshow/animate/: __init__.py  fade.py  linger.py  place.py
