[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silhouette-slideshow"
version = "0.1.0"
description = "Composable photo-slideshow steps: silhouette, center, video."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pillow-heif>=0.16",
    "rembg>=2.0.50",
    "onnxruntime>=1.16",
    "opencv-python>=4.8",
    "certifi>=2023.7",
]

[project.scripts]
slideshow = "slideshow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slideshow = ["models/*.prototxt"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
